@@ -1,3 +1,8 @@
+2012-04-05  Jason Merrill  <jason@redhat.com>
+
+	PR c++/52596
+	* g++.dg/template/qualified-id5.C: New.
+
 2012-04-03  Jason Merrill  <jason@redhat.com>
 
 	PR c++/52796
