@@ -1,3 +1,9 @@
+2012-04-05  Jason Merrill  <jason@redhat.com>
+
+	PR c++/52596
+	* tree.c (lvalue_kind): Treat a deferred access control SCOPE_REF
+	as an lvalue.
+
 2012-04-03  Jason Merrill  <jason@redhat.com>
 
 	PR c++/52796
